--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,61 @@
 services:
-  app:
+  medical-clinic:
+    image: medical-clinic
+    container_name: medical-clinic-app
+    ports:
+      - "8080:8080"
+    networks:
+      - med-app-network
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-db:5432/mydatabase
+      SPRING_DATASOURCE_USERNAME: user1
+      SPRING_DATASOURCE_PASSWORD: password1
+    depends_on:
+      - postgres-db
+
+  postgres-db:
+    image: postgres:latest
+    container_name: postgres-db-med
+    environment:
+      POSTGRES_USER: user1
+      POSTGRES_PASSWORD: password1
+      POSTGRES_DB: mydatabase
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - med-app-network
+    ports:
+      - "5432:5432"
+
+  medical-clinic-proxy:
     build:
       context: .
       dockerfile: Dockerfile
-      container_name: medical-clinic-proxy-app
-      ports:
-        - "8085:8085"
+    container_name: medical-clinic-proxy-app
+    ports:
+      - "8085:8085"
+    networks:
+      - med-app-network
+
+  pgadmin-med:
+    image: dpage/pgadmin4
+    container_name: pgadmin-med
+    environment:
+      PGADMIN_DEFAULT_EMAIL: marko@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin1
+    ports:
+      - "8081:80"
+    depends_on:
+      - postgres-db
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin-med
+    networks:
+      - med-app-network
+
+volumes:
+  postgres_data:
+  pgadmin_data:
+
+networks:
+  med-app-network:
+    driver: bridge
