--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,11 @@ server.port=8085
 
 spring.cloud.openfeign.client.config.medicalClinicProxyClient.url=http://localhost:8080
 spring.cloud.openfeign.circuitbreaker.enabled=false
+
+logging.level.org.springframework=DEBUG
+logging.level.com.pmarko09.medical_clinic_proxy=DEBUG
+logging.file.name=logs/medical-clinic-proxy.log
+feign.client.config.medClinicClient.loggerLevel=full
+
+
+logstash.host=logstash
