--- a/docker-compose-elk.yml
+++ b/docker-compose-elk.yml
@@ -1,39 +1,43 @@
 services:
   elasticsearch:
-    image: elasticsearch:8.16.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.10.2
     container_name: elasticsearch
     environment:
       - discovery.type=single-node
-      - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
-    networks:
-      - elk-network
+      - xpack.security.enabled=false
     ports:
       - "9200:9200"
+    volumes:
+      - es_data:/usr/share/elasticsearch/data
+    networks:
+      - elk
 
   logstash:
-    image: logstash:8.16.0
+    image: docker.elastic.co/logstash/logstash:8.10.2
     container_name: logstash
-    volumes:
-      - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf:ro
-    networks:
-      - elk-network
     depends_on:
       - elasticsearch
     ports:
-      - "5000:5000"
+      - "5044:5044"
+    volumes:
+      - ./logstash/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+    networks:
+      - elk
 
   kibana:
-    image: kibana:8.16.0
+    image: docker.elastic.co/kibana/kibana:8.10.2
     container_name: kibana
     environment:
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - ELASTICSEARCH_URL=http://elasticsearch:9200
     depends_on:
       - elasticsearch
-    networks:
-      - elk-network
     ports:
       - "5601:5601"
+    networks:
+      - elk
+
+volumes:
+  es_data:
 
 networks:
-  elk-network:
-    external: true
+  elk:
